Fix icons alignment

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 2%;
     position: absolute;
     z-index: 2;
     text-shadow: 0 0 0.4vw white;
@@ -17,12 +18,13 @@
 }
 
 .social {
-    margin-left: 45px;
+    width: 15%;
     display: flex;
-    gap: 3.5vw;
+    justify-content: space-evenly;
 }
 
-.icon {    
+.icon {
+    width: 5vw;
     font-size: 2.6vw;
     filter: drop-shadow(0 0 1.2vw rgba(255, 255, 255, 0.5));
 }
